--- a/.github/workflows/build_and_run.yaml
+++ b/.github/workflows/build_and_run.yaml
@@ -9,9 +9,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+    - env: 
+        MY_SECRET: ${{ secrets.MY_REPO_SECRET }}
     - uses: actions/checkout@v3
     - name: run script
       run: |
         ls -la
         pwd
-        ./run.sh "{{ MY_REPO_SECRET }}" 
+        ./run.sh "$MY_SECRET" 
