--- a/.github/workflows/build_and_run.yaml
+++ b/.github/workflows/build_and_run.yaml
@@ -9,6 +9,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+    # my environment
     - env: 
         MY_SECRET: ${{ secrets.MY_REPO_SECRET }}
     - uses: actions/checkout@v3
