--- a/.github/workflows/build_and_run.yaml
+++ b/.github/workflows/build_and_run.yaml
@@ -3,15 +3,16 @@ name: Build and Parse Secret to it
 
 on:
   workflow_dispatch:
-
+  
+env: 
+  MY_SECRET: ${{ secrets.MY_REPO_SECRET }}
+  
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     # my environment
     - uses: actions/checkout@v3
-    - env: 
-        MY_SECRET: ${{ secrets.MY_REPO_SECRET }}
     - name: run script
       run: |
         ls -la
